lisasin pildile raami

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div>
-    <h1>Minu fotogalerii</h1>
-    <p>Siia panen oma ilusamad fotod. Osad läksid mul kahjuks võibolla SSD katki mineku tõttu kaduma.</p>
+    <h1 style="color:#2e7233">Minu fotogalerii</h1>
+    <p style='font-family: "Times New Roman", Times, serif;'>Siia panen oma ilusamad fotod. Osad läksid mul kahjuks võibolla SSD katki mineku tõttu kaduma.</p>
     <br>
     <a href="http://www.kommentaarid.ee/et" target="_blank">link veebilehele mille ma mõned aastad tagasi tegin.</a>
-    <img src="pilt%20minust.jpg" alt="Mina bussi taustal">
+    <img src="pilt%20minust.jpg" alt="Mina bussi taustal" style="border: 5px solid #555">
 </div>
 <div>
 <h2>maastikupildid</h2>
